Next batch of website restructuring

--- a/docs/salesforce/marketing-cloud-engagement/sql/sql-basics.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/sql/sql-basics.mdx
@@ -1,5 +1,5 @@
 ---
-id: sfmc-sql-basics
+id: sql-basics
 title: SFMC SQL Basics
 sidebar_label: SQL Basics
 description: SELECT your data FROM Salesforce Marketing Cloud WHERE drag-and-drop Filters are not enough.
