--- a/docs/salesforce/marketing-cloud-engagement/sql/sql-case.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/sql/sql-case.mdx
@@ -1,5 +1,5 @@
 ---
-id: sfmc-sql-case
+id: sql-case
 title: SFMC SQL Case
 sidebar_label: Case
 description: Empower your Marketing Cloud queries with conditional SQL CASE logic.
