--- a/docs/salesforce/marketing-cloud-engagement/sql/sql-date-functions.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/sql/sql-date-functions.mdx
@@ -1,5 +1,5 @@
 ---
-id: sfmc-sql-date-functions
+id: sql-date-functions
 title: SFMC SQL Date Functions
 sidebar_label: Date Functions
 description: Take control over dates with built-in SQL functions. Let the query do the job.
