--- a/docs/salesforce/marketing-cloud-engagement/sql/sql-from.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/sql/sql-from.mdx
@@ -1,5 +1,5 @@
 ---
-id: sfmc-sql-from
+id: sql-from
 title: SFMC SQL From
 sidebar_label: From
 description: Tell the SQL query FROM where you need the data.
