--- a/docs/salesforce/marketing-cloud-engagement/sql/sql-join.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/sql/sql-join.mdx
@@ -1,5 +1,5 @@
 ---
-id: sfmc-sql-join
+id: sql-join
 title: SFMC SQL Join
 sidebar_label: Join
 description: Data Extensions. System Data Views. With the JOIN statement, use one query to rule them all.
