--- a/docs/salesforce/marketing-cloud-engagement/sql/sql-like.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/sql/sql-like.mdx
@@ -1,5 +1,5 @@
 ---
-id: sfmc-sql-like
+id: sql-like
 title: SFMC SQL Like
 sidebar_label: Like
 description: Get a LIKE and build more flexible SQL queries.
