--- a/docs/salesforce/marketing-cloud-engagement/sql/sql-null-functions.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/sql/sql-null-functions.mdx
@@ -1,5 +1,5 @@
 ---
-id: sfmc-sql-null-functions
+id: sql-null-functions
 title: SFMC SQL NULL Functions
 sidebar_label: Null Functions
 description: IS NULL, or IS NOT NULL, that is the question. Ways of working with NULL values in SFMC SQL.
