--- a/docs/salesforce/marketing-cloud-engagement/sql/sql-string-functions.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/sql/sql-string-functions.mdx
@@ -1,5 +1,5 @@
 ---
-id: sfmc-sql-string-functions
+id: sql-string-functions
 title: SFMC SQL String Functions
 sidebar_label: String Functions
 description: Take control over strings with built-in SQL functions. Let the query do the job.
