--- a/docs/salesforce/marketing-cloud-engagement/sql/sql-style-guide.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/sql/sql-style-guide.mdx
@@ -1,5 +1,5 @@
 ---
-id: sfmc-sql-style-guide
+id: sql-style-guide
 title: SFMC SQL Style Guide
 sidebar_label: Style Guide
 description: Query with style. Readable, bug-free code is a few shifts & spaces away.
