--- a/docs/salesforce/marketing-cloud-engagement/sql/sql-where.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/sql/sql-where.mdx
@@ -1,5 +1,5 @@
 ---
-id: sfmc-sql-where
+id: sql-where
 title: SFMC SQL Where
 sidebar_label: Where
 description: Use WHERE to make your query lean and to the point. Less is more.
