--- a/docs/salesforce/marketing-cloud-personalization/catalog-architecture.mdx
+++ b/docs/salesforce/marketing-cloud-personalization/catalog-architecture.mdx
@@ -1,5 +1,5 @@
 ---
-id: mcp-catalog-architecture
+id: catalog-architecture
 title: MCP Catalog Architecture
 sidebar_label: Catalog Architecture
 description: Marketing Cloud Personalization (Interaction Studio) Catalog Objects architecture, data ingestion, limitations, tricks and tips. Build right from the start.
