--- a/docs/salesforce/marketing-cloud-personalization/open-time-email.mdx
+++ b/docs/salesforce/marketing-cloud-personalization/open-time-email.mdx
@@ -1,5 +1,5 @@
 ---
-id: mcp-open-time-email
+id: open-time-email
 title: MCP Open Time Email
 sidebar_label: Open Time Email
 description: Personalise your SFMC emails with the next best action recommendations. In real-time. Even after delivery. Magic.
