--- a/docs/salesforce/marketing-cloud-personalization/serverside-code-basics.mdx
+++ b/docs/salesforce/marketing-cloud-personalization/serverside-code-basics.mdx
@@ -1,5 +1,5 @@
 ---
-id: mcp-serverside-code-basics
+id: serverside-code-basics
 title: MCP Serverside Code Basics
 sidebar_label: Serverside Code Basics
 description: "Wrap your head around the core feature of Marketing Cloud Personalization (Interaction Studio) and build the bridge between marketer and customer."
