--- a/docs/salesforce/marketing-cloud-personalization/serverside-code-context.mdx
+++ b/docs/salesforce/marketing-cloud-personalization/serverside-code-context.mdx
@@ -1,5 +1,5 @@
 ---
-id: mcp-serverside-code-context
+id: serverside-code-context
 title: MCP Serverside Code Context
 sidebar_label: Serverside Code Context
 description: "Context is king. Also when writing MCP Template Serverside Code."
