--- a/docs/salesforce/marketing-cloud-engagement/sql/sql-aggregate-functions.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/sql/sql-aggregate-functions.mdx
@@ -1,5 +1,5 @@
 ---
-id: sfmc-sql-aggregate-functions
+id: sql-aggregate-functions
 title: SFMC SQL Aggregate Functions
 sidebar_label: Aggregate Functions
 description: Group rows and apply aggregate functions to see the big picture in your data extensions.
