--- a/docs/salesforce/marketing-cloud-engagement/sql/sql-numeric-functions.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/sql/sql-numeric-functions.mdx
@@ -1,5 +1,5 @@
 ---
-id: sfmc-sql-numeric-functions
+id: sql-numeric-functions
 title: SFMC SQL Numeric Functions
 sidebar_label: Numeric Functions
 description: Take control over numbers with built-in SQL functions. Let the query do the job.
