--- a/docs/salesforce/marketing-cloud-engagement/sql/sql-select.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/sql/sql-select.mdx
@@ -1,5 +1,5 @@
 ---
-id: sfmc-sql-select
+id: sql-select
 title: SFMC SQL Select
 sidebar_label: Select
 description: Selected information on the SELECT statement in SFMC SQL.
