import update from related to static links

--- a/docs/docs-and-snippets.mdx
+++ b/docs/docs-and-snippets.mdx
@@ -7,8 +7,8 @@ description: SSJS + JS + AMPScript + SQL + SFMC Config documentation and code sn
 image: img/og/og-image-docs-and-snippets.png
 ---
 
-import { LeadText } from '../src/components/LeadText.js';
-import { Button } from '../src/components/Buttons.js';
+import { LeadText } from '/src/components/LeadText.js';
+import { Button } from '/src/components/Buttons.js';
 
 <LeadText content="SSJS + JS + AMPScript + SQL + SFMC & MCP Config documentation and code snippets that I find useful for developing Salesforce Marketing Cloud." />
 
