--- a/docs/js/js-dom.mdx
+++ b/docs/js/js-dom.mdx
@@ -7,7 +7,7 @@ image: img/og/og-image-js-dom.png
 tags: [JavaScript, Cloud Page, Personalisation]
 ---
 
-import { LeadText } from '../../src/components/LeadText.js';
+import { LeadText } from '/src/components/LeadText.js';
 
 <LeadText content='Explore, traverse and modify web pages with the power of JavaScript DOM properties and methods.' />
 
