--- a/docs/js/js-if-and-switch.mdx
+++ b/docs/js/js-if-and-switch.mdx
@@ -7,7 +7,7 @@ image: img/og/og-image-js-if-and-switch.png
 tags: [JavaScript]
 ---
 
-import { LeadText } from '../../src/components/LeadText.js';
+import { LeadText } from '/src/components/LeadText.js';
 
 <LeadText content='Deep dive into the two pillars of JavaScript flow control' />
 
