--- a/docs/js/js-loops.mdx
+++ b/docs/js/js-loops.mdx
@@ -7,7 +7,7 @@ image: img/og/og-image-js-loops.png
 tags: [JavaScript]
 ---
 
-import { LeadText } from '../../src/components/LeadText.js';
+import { LeadText } from '/src/components/LeadText.js';
 
 <LeadText content="JavaScript offers four for loops and two while loops. What's the difference?" />
 
