--- a/docs/salesforce/marketing-cloud-engagement/config/appexchange-solutions.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/config/appexchange-solutions.mdx
@@ -7,14 +7,14 @@ image: img/og/og-image-sfmc-appexchange.png
 tags: [Marketing Cloud, App, AppExchange]
 ---
 
-import { LeadText } from '../../../../src/components/LeadText.js';
-import { Button, ButtonRow } from '../../../../src/components/Buttons.js';
+import { LeadText } from '/src/components/LeadText.js';
+import { Button, ButtonRow } from '/src/components/Buttons.js';
 import Image from '@theme/IdealImage';
-import flowchart from '../../../../static/img/article/article-image-appexchange-flowchart.png';
-import segmentation from '../../../../static/img/article/article-image-appexchange-segmentation.png';
-import queryStudio from '../../../../static/img/article/article-image-appexchange-query-studio.png';
-import deselectSegment from '../../../../static/img/article/article-image-appexchange-deselect-segment.png';
-import activationStudio from '../../../../static/img/article/article-image-appexchange-activation-studio.png';
+import flowchart from '/static/img/article/article-image-appexchange-flowchart.png';
+import segmentation from '/static/img/article/article-image-appexchange-segmentation.png';
+import queryStudio from '/static/img/article/article-image-appexchange-query-studio.png';
+import deselectSegment from '/static/img/article/article-image-appexchange-deselect-segment.png';
+import activationStudio from '/static/img/article/article-image-appexchange-activation-studio.png';
 
 <LeadText content="Fill the feature gaps with plug-and-play apps. Solution highlights from Salesforce Marketing Cloud's AppExchange." />
 
