--- a/docs/salesforce/marketing-cloud-engagement/config/code-resource.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/config/code-resource.mdx
@@ -7,7 +7,7 @@ image: img/og/og-image-sfmc-code-resources.png
 tags: [Marketing Cloud, SSJS, AMPScript, Snippet, Cloud Page, App]
 ---
 
-import { LeadText } from '../../../../src/components/LeadText.js';
+import { LeadText } from '/src/components/LeadText.js';
 
 <LeadText content="Learn how to use and abuse SFMC Code Resources, the free-of-charge programmatic powerhouse." />
 
