--- a/docs/salesforce/marketing-cloud-engagement/config/contact-deletion.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/config/contact-deletion.mdx
@@ -8,7 +8,7 @@ tags: [Marketing Cloud, Snippet, SSJS, SQL, Data Extensions, Data Management]
 toc_max_heading_level: 4
 ---
 
-import { LeadText } from '../../../../src/components/LeadText.js';
+import { LeadText } from '/src/components/LeadText.js';
 
 <LeadText content="Marketing Automation is as powerful as the database quality behind it. To make it good you must first remove the bad. Let's do it." />
 
