--- a/docs/salesforce/marketing-cloud-engagement/config/enhanced-send-log.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/config/enhanced-send-log.mdx
@@ -7,7 +7,7 @@ image: img/og/og-image-sql-enhanced-send-log.png
 tags: [Marketing Cloud, SQL, Snippet, Email, Debugging, Analytics]
 ---
 
-import { LeadText } from '../../../../src/components/LeadText.js';
+import { LeadText } from '/src/components/LeadText.js';
 
 <LeadText content='Create, customise and enhance SFMC Send Log for debugging and reporting.' />
 
