--- a/docs/salesforce/marketing-cloud-engagement/config/export-import-document-sfmc-roles.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/config/export-import-document-sfmc-roles.mdx
@@ -7,8 +7,8 @@ image: img/og/og-image-js-export-import-document-sfmc-roles.png
 tags: [JavaScript, Marketing Cloud, Configuration, Users, Setup]
 ---
 
-import { LeadText } from '../../../../src/components/LeadText.js';
-import { Button } from '../../../../src/components/Buttons.js';
+import { LeadText } from '/src/components/LeadText.js';
+import { Button } from '/src/components/Buttons.js';
 
 <LeadText content="Backup, clone, and move cross-account the Salesforce Marketing Cloud roles. In seconds." />
 
