--- a/docs/salesforce/marketing-cloud-engagement/config/features-on-demand.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/config/features-on-demand.mdx
@@ -7,7 +7,7 @@ image: img/og/og-image-sfmc-features-on-demand.png
 tags: [Marketing Cloud, Configuration, Deliverability, Email, SMS, Analytics, Journey, Automation, Data Extensions, Setup]
 ---
 
-import { LeadText } from '../../../../src/components/LeadText.js';
+import { LeadText } from '/src/components/LeadText.js';
 
 <LeadText content="Discover the Salesforce Marketing Cloud's Features On Demand and unlock platform potential." />
 
