--- a/docs/salesforce/marketing-cloud-engagement/config/licence-limits.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/config/licence-limits.mdx
@@ -9,8 +9,8 @@ toc_max_heading_level: 4
 unlisted: true
 ---
 
-import { LeadText } from '../../../../src/components/LeadText.js';
-import { Button } from '../../../../src/components/Buttons.js';
+import { LeadText } from '/src/components/LeadText.js';
+import { Button } from '/src/components/Buttons.js';
 
 <LeadText content="With great flexibility come great limitations. Learn how SFMC limits can make or break your marketing operations." />
 
