--- a/docs/salesforce/marketing-cloud-engagement/config/mcc-integration-patterns.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/config/mcc-integration-patterns.mdx
@@ -8,7 +8,7 @@ tags: [Marketing Cloud, CRM, Configuration, Setup, Integration, Automation]
 toc_max_heading_level: 4
 ---
 
-import { LeadText } from '../../../../src/components/LeadText.js';
+import { LeadText } from '/src/components/LeadText.js';
 
 <LeadText content="Marketing Cloud Connect Architecture: Single-Org, Multi-Org and everything in between. Integrate Salesforce CRM and Marketing Cloud the right way." />
 
