--- a/docs/salesforce/marketing-cloud-engagement/config/system-data-views.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/config/system-data-views.mdx
@@ -9,8 +9,8 @@ tags: [Marketing Cloud, Configuration, SQL, Analytics, Data Extensions, Email, A
 
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
-import { LeadText } from '../../../../src/components/LeadText.js';
-import { ButtonRow } from '../../../../src/components/Buttons.js';
+import { LeadText } from '/src/components/LeadText.js';
+import { ButtonRow } from '/src/components/Buttons.js';
 
 <LeadText content='Dive deep into System Data Views - the backend Marketing Cloud data. Actionable pearls await.' />
 
