--- a/docs/salesforce/marketing-cloud-engagement/config/webinars/sfmc-webinar-account-architecture.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/config/webinars/sfmc-webinar-account-architecture.mdx
@@ -7,8 +7,8 @@ image: img/og/og-image-webinar-sfmc-account-architecture.png
 tags: [Webinar, Marketing Cloud, Setup, Configuration, Deliverability]
 ---
 
-import { LeadText } from '../../../../../src/components/LeadText.js';
-import { YouTube } from '../../../../../src/components/VideoEmbed.js';
+import { LeadText } from '/src/components/LeadText.js';
+import { YouTube } from '/src/components/VideoEmbed.js';
 
 <LeadText content="Learn how to structure your Marketing Cloud Account to make the most of the Business Units, Marketing Cloud Connect and deliverability features." />
 
