--- a/docs/salesforce/marketing-cloud-engagement/config/webinars/sfmc-webinar-architecting-web-solutions.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/config/webinars/sfmc-webinar-architecting-web-solutions.mdx
@@ -7,8 +7,8 @@ image: img/og/og-image-webinar-architecting-web-solutions.png
 tags: [Webinar, Marketing Cloud, Best Practice, AMPScript, SSJS, JavaScript, Cloud Page]
 ---
 
-import { LeadText } from '../../../../../src/components/LeadText.js';
-import { YouTube } from '../../../../../src/components/VideoEmbed.js';
+import { LeadText } from '/src/components/LeadText.js';
+import { YouTube } from '/src/components/VideoEmbed.js';
 
 <LeadText content="Learn how to make the most out of Marketing Cloud Web Studio using best practices and tested architecture patterns for Cloud Pages and Code Resources." />
 
