--- a/docs/salesforce/marketing-cloud-engagement/config/webinars/sfmc-webinar-cloud-page-apps.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/config/webinars/sfmc-webinar-cloud-page-apps.mdx
@@ -7,8 +7,8 @@ image: img/og/og-image-webinar-cloud-page-apps.png
 tags: [Webinar, Marketing Cloud, AppExchange, SSJS, Cloud Page, App, Snippet, Configuration]
 ---
 
-import { LeadText } from '../../../../../src/components/LeadText.js';
-import { YouTube } from '../../../../../src/components/VideoEmbed.js';
+import { LeadText } from '/src/components/LeadText.js';
+import { YouTube } from '/src/components/VideoEmbed.js';
 
 <LeadText content="Learn how and when to create a custom application for your SFMC users using Cloud Pages, Code Resources and Installed Packages." />
 
