--- a/docs/salesforce/marketing-cloud-engagement/config/webinars/sfmc-webinar-salesforce-data-in-journey-builder.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/config/webinars/sfmc-webinar-salesforce-data-in-journey-builder.mdx
@@ -7,8 +7,8 @@ image: img/og/og-image-webinar-salesforce-data-in-journey-builder.png
 tags: [Webinar, Marketing Cloud, Best Practice, AMPScript, CRM, Configuration, Data Management, Integration, Journey]
 ---
 
-import { LeadText } from '../../../../../src/components/LeadText.js';
-import { YouTube } from '../../../../../src/components/VideoEmbed.js';
+import { LeadText } from '/src/components/LeadText.js';
+import { YouTube } from '/src/components/VideoEmbed.js';
 
 <LeadText content="Learn how to integrate and use Salesforce CRM data with SFMC Journey Builder. In both ways. The right way." />
 
