--- a/docs/salesforce/marketing-cloud-engagement/sql/snippets/sql-debugging-email-sends.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/sql/snippets/sql-debugging-email-sends.mdx
@@ -7,10 +7,10 @@ image: img/og/og-image-sql-debugging-email-sends.png
 tags: [Marketing Cloud, SQL, Snippet, Email, Debugging, Analytics]
 ---
 
-import { LeadText } from '../../../../../src/components/LeadText.js';
-import { Button, ButtonRow } from '../../../../../src/components/Buttons.js';
+import { LeadText } from '/src/components/LeadText.js';
+import { Button, ButtonRow } from '/src/components/Buttons.js';
 import Image from '@theme/IdealImage';
-import flowchart from '../../../../../static/img/article/article-image-sfmc-debugging-email-sends.png'
+import flowchart from '/static/img/article/article-image-sfmc-debugging-email-sends.png'
 
 <LeadText content='Make finding problems with email delivery in Salesforce Marketing Cloud great again. SQL with the Query Studio to the rescue.' />
 
