--- a/docs/salesforce/marketing-cloud-engagement/sql/snippets/sql-debugging-value-length.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/sql/snippets/sql-debugging-value-length.mdx
@@ -7,7 +7,7 @@ image: img/og/og-image-sql-debugging-value-length.png
 tags: [Marketing Cloud, SQL, Snippet, Data Extensions, Debugging, Automation]
 ---
 
-import { LeadText } from '../../../../../src/components/LeadText.js';
+import { LeadText } from '/src/components/LeadText.js';
 
 <LeadText content='Your Automations crash due to longer than expected values coming from the external source? Make your life easier with SQL.' />
 
