--- a/docs/salesforce/marketing-cloud-engagement/sql/sql-basics.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/sql/sql-basics.mdx
@@ -7,8 +7,8 @@ image: img/og/og-image-sql-basics.png
 tags: [Marketing Cloud, SQL]
 ---
 
-import { LeadText } from '../../../../src/components/LeadText.js';
-import { ButtonRow } from '../../../../src/components/Buttons.js';
+import { LeadText } from '/src/components/LeadText.js';
+import { ButtonRow } from '/src/components/Buttons.js';
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 import DocCardList from '@theme/DocCardList';
