--- a/docs/salesforce/marketing-cloud-engagement/sql/sql-case.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/sql/sql-case.mdx
@@ -7,7 +7,7 @@ image: img/og/og-image-sql-case.png
 tags: [Marketing Cloud, SQL]
 ---
 
-import { LeadText } from '../../../../src/components/LeadText.js';
+import { LeadText } from '/src/components/LeadText.js';
 
 <LeadText content='Empower your Marketing Cloud queries with conditional SQL CASE logic.' />
 
