--- a/docs/salesforce/marketing-cloud-engagement/sql/sql-conversion-functions.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/sql/sql-conversion-functions.mdx
@@ -7,7 +7,7 @@ image: img/og/og-image-sql-conversion-functions.png
 tags: [Marketing Cloud, SQL]
 ---
 
-import { LeadText } from '../../../../src/components/LeadText.js';
+import { LeadText } from '/src/components/LeadText.js';
 
 <LeadText content='Break from the limits of source data types. Use the full power of SQL to transform your values.' />
 
