--- a/docs/salesforce/marketing-cloud-engagement/sql/sql-from.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/sql/sql-from.mdx
@@ -7,7 +7,7 @@ image: img/og/og-image-sql-from.png
 tags: [Marketing Cloud, SQL]
 ---
 
-import { LeadText } from '../../../../src/components/LeadText.js';
+import { LeadText } from '/src/components/LeadText.js';
 
 <LeadText content='Tell the SQL query FROM where you need the data' />
 
