--- a/docs/salesforce/marketing-cloud-engagement/sql/sql-join.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/sql/sql-join.mdx
@@ -7,12 +7,12 @@ image: img/og/og-image-sql-join.png
 tags: [Marketing Cloud, SQL]
 ---
 
-import { LeadText } from '../../../../src/components/LeadText.js';
-import { Button } from '../../../../src/components/Buttons.js';
+import { LeadText } from '/src/components/LeadText.js';
+import { Button } from '/src/components/Buttons.js';
 import Image from '@theme/IdealImage';
-import cheatSheet from '../../../../static/img/article/article-image-sql-join-cheat-sheet.png';
-import innerLeftJoin from '../../../../static/img/article/article-image-sql-join-inner-left-join.png'
-import innerLeftJoinReversed from '../../../../static/img/article/article-image-sql-join-inner-left-join-reversed.png'
+import cheatSheet from '/static/img/article/article-image-sql-join-cheat-sheet.png';
+import innerLeftJoin from '/static/img/article/article-image-sql-join-inner-left-join.png'
+import innerLeftJoinReversed from '/static/img/article/article-image-sql-join-inner-left-join-reversed.png'
 
 <LeadText content='Data Extensions. System Data Views. With the JOIN statement, use one query to rule them all.' />
 
