--- a/docs/salesforce/marketing-cloud-engagement/sql/sql-like.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/sql/sql-like.mdx
@@ -9,7 +9,7 @@ tags: [Marketing Cloud, SQL]
 
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
-import { LeadText } from '../../../../src/components/LeadText.js';
+import { LeadText } from '/src/components/LeadText.js';
 
 <LeadText content='Get a LIKE and build more flexible SQL queries.' />
 
