--- a/docs/salesforce/marketing-cloud-engagement/ssjs/debugging-ssjs.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/ssjs/debugging-ssjs.mdx
@@ -9,7 +9,7 @@ tags: [Marketing Cloud, SSJS, Debugging, Cloud Page, Email, Automation]
 
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
-import { LeadText } from '../../../../src/components/LeadText.js';
+import { LeadText } from '/src/components/LeadText.js';
 
 <LeadText content='To catch, or not to catch, that is debugging.' />
 
