--- a/docs/salesforce/marketing-cloud-engagement/ssjs/snippets/sfmc-cloud-page-apps.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/ssjs/snippets/sfmc-cloud-page-apps.mdx
@@ -8,7 +8,7 @@ tags: [Marketing Cloud, SSJS, AMPScript, Snippet, Cloud Page, App]
 
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
-import { LeadText } from '../../../../../src/components/LeadText.js';
+import { LeadText } from '/src/components/LeadText.js';
 
 <LeadText content="Create micro applications tailored to your organisation needs using only Salesforce Marketing Cloud features." />
 
