--- a/docs/salesforce/marketing-cloud-engagement/ssjs/snippets/ssjs-mobileconnect-phone-change.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/ssjs/snippets/ssjs-mobileconnect-phone-change.mdx
@@ -7,7 +7,7 @@ image: img/og/og-image-ssjs-mobileconnect-phone-change.png
 tags: [Marketing Cloud, SSJS, SMS]
 ---
 
-import { LeadText } from '../../../../../src/components/LeadText.js';
+import { LeadText } from '/src/components/LeadText.js';
 
 <LeadText content='Control your MobileConnect data with hidden _MobileAddress features.' />
 
