--- a/docs/salesforce/marketing-cloud-engagement/ssjs/snippets/ssjs-script-template.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/ssjs/snippets/ssjs-script-template.mdx
@@ -7,7 +7,7 @@ image: img/og/og-image-ssjs-script-template.png
 tags: [Marketing Cloud, SSJS, Snippet]
 ---
 
-import { LeadText } from '../../../../../src/components/LeadText.js';
+import { LeadText } from '/src/components/LeadText.js';
 
 <LeadText content='Jumpstart your coding with best practice fueled SSJS Template.' />
 
