--- a/docs/salesforce/marketing-cloud-engagement/ssjs/ssjs-if-and-switch.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/ssjs/ssjs-if-and-switch.mdx
@@ -7,7 +7,7 @@ image: img/og/og-image-ssjs-if-and-switch.png
 tags: [Marketing Cloud, SSJS]
 ---
 
-import { LeadText } from '../../../../src/components/LeadText.js';
+import { LeadText } from '/src/components/LeadText.js';
 
 <LeadText content='Deep dive into the two pillars of SSJS flow control' />
 
