--- a/docs/salesforce/marketing-cloud-engagement/ssjs/ssjs-loops.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/ssjs/ssjs-loops.mdx
@@ -7,7 +7,7 @@ image: img/og/og-image-ssjs-loops.png
 tags: [Marketing Cloud, SSJS]
 ---
 
-import { LeadText } from '../../../../src/components/LeadText.js';
+import { LeadText } from '/src/components/LeadText.js';
 
 <LeadText content="Let's dive into limited looping options of the SSJS." />
 
