--- a/docs/salesforce/marketing-cloud-engagement/ssjs/ssjs-vs-ampscript-performance.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/ssjs/ssjs-vs-ampscript-performance.mdx
@@ -9,7 +9,7 @@ tags: [Marketing Cloud, SSJS, AMPScript, Performance]
 
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
-import { LeadText } from '../../../../src/components/LeadText.js';
+import { LeadText } from '/src/components/LeadText.js';
 
 <LeadText content='Should I use AMPScript or SSJS? Which is better? As always, it depends. Check the performance comparisons for various use cases.' />
 
