--- a/docs/salesforce/marketing-cloud-engagement/ssjs/ssjs-wsproxy.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/ssjs/ssjs-wsproxy.mdx
@@ -7,7 +7,7 @@ unlitsted: true
 
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
-import { LeadText } from '../../../../src/components/LeadText.js';
+import { LeadText } from '/src/components/LeadText.js';
 
 <LeadText content='Make SOAP API great again!' />
 
