--- a/docs/salesforce/marketing-cloud-personalization/catalog-architecture.mdx
+++ b/docs/salesforce/marketing-cloud-personalization/catalog-architecture.mdx
@@ -8,7 +8,7 @@ tags: [Marketing Cloud, Marketing Cloud Personalization, Interaction Studio, Set
 toc_max_heading_level: 4
 ---
 
-import { LeadText } from '../../../src/components/LeadText.js';
+import { LeadText } from '/src/components/LeadText.js';
 
 <LeadText content="Marketing Cloud Personalization (Interaction Studio) Catalog Objects architecture, data ingestion, limitations, tricks and tips. Build right from the start." />
 
