--- a/docs/salesforce/marketing-cloud-personalization/open-time-email.mdx
+++ b/docs/salesforce/marketing-cloud-personalization/open-time-email.mdx
@@ -7,7 +7,7 @@ image: img/og/og-image-mcp-open-time-email.png
 tags: [Marketing Cloud, Marketing Cloud Personalization, Interaction Studio, Personalisation, Email]
 ---
 
-import { LeadText } from '../../../src/components/LeadText.js';
+import { LeadText } from '/src/components/LeadText.js';
 
 <LeadText content='Personalise your SFMC emails with the next best action recommendations. In real-time. Even after delivery. Magic.'/>
 
