--- a/docs/salesforce/marketing-cloud-personalization/serverside-code-basics.mdx
+++ b/docs/salesforce/marketing-cloud-personalization/serverside-code-basics.mdx
@@ -7,12 +7,12 @@ image: img/og/og-image-mcp-serverside-code-basics.png
 tags: [Marketing Cloud, Marketing Cloud Personalization, Interaction Studio, Personalisation, TypeScript]
 ---
 
-import { LeadText } from '../../../src/components/LeadText.js';
-import { Button } from '../../../src/components/Buttons.js';
+import { LeadText } from '/src/components/LeadText.js';
+import { Button } from '/src/components/Buttons.js';
 import DocCardList from '@theme/DocCardList';
 import Image from '@theme/IdealImage';
-import purpose from '../../../static/img/article/article-image-is-serverside-purpose.png';
-import templateUi from '../../../static/img/article/article-image-is-serverside-template-ui.png';
+import purpose from '/static/img/article/article-image-is-serverside-purpose.png';
+import templateUi from '/static/img/article/article-image-is-serverside-template-ui.png';
 
 <LeadText content= "Wrap your head around the core feature of Marketing Cloud Personalization (Interaction Studio) and build the bridge between marketer and customer."/>
 
