--- a/docs/salesforce/marketing-cloud-personalization/serverside-code-context.mdx
+++ b/docs/salesforce/marketing-cloud-personalization/serverside-code-context.mdx
@@ -7,7 +7,7 @@ image: img/og/og-image-mcp-serverside-code-context.png
 tags: [Marketing Cloud, Marketing Cloud Personalization, Interaction Studio, Personalisation, TypeScript]
 ---
 
-import { LeadText } from '../../../src/components/LeadText.js';
+import { LeadText } from '/src/components/LeadText.js';
 
 <LeadText content="Context is king. Also when coding MCP Campaign Templates. Read about all its undocumented tricks." />
 
