--- a/docs/salesforce/marketing-cloud-personalization/snippets/catalog-etl-metadata-viewer.mdx
+++ b/docs/salesforce/marketing-cloud-personalization/snippets/catalog-etl-metadata-viewer.mdx
@@ -7,8 +7,8 @@ image: img/og/og-image-mcp-catalog-etl-metadata-viewer.png
 tags: [Marketing Cloud, Marketing Cloud Personalization, Interaction Studio, TypeScript, Data Management]
 ---
 
-import { LeadText } from '../../../../src/components/LeadText.js';
-import { Button } from '../../../../src/components/Buttons.js';
+import { LeadText } from '/src/components/LeadText.js';
+import { Button } from '/src/components/Buttons.js';
 
 <LeadText content="Debug your Marketing Cloud Personalization (Interaction Studio) Catalog Object Item attributes with the power of Serverside Code." />
 
