--- a/sites/faq/salesforce/how-to-get-sf-certification-vouchers.mdx
+++ b/sites/faq/salesforce/how-to-get-sf-certification-vouchers.mdx
@@ -7,8 +7,8 @@ image: img/og/og-image-faq-sf-certification-vouchers.png
 tags: [Marketing Cloud, FAQ]
 ---
 
-import { LeadText } from '../../../src/components/LeadText.js';
-import { Button } from '../../../src/components/Buttons.js';
+import { LeadText } from '/src/components/LeadText.js';
+import { Button } from '/src/components/Buttons.js';
 
 <LeadText content="Salesforce Certifications. What, why and how (you can pay less)." />
 
