--- a/sites/ideas/salesforce/marketing-cloud-engagement-ideas.mdx
+++ b/sites/ideas/salesforce/marketing-cloud-engagement-ideas.mdx
@@ -7,8 +7,8 @@ image: img/og/og-image-marketing-cloud-ideas.png
 tags: [Marketing Cloud Engagement]
 ---
 
-import { LeadText } from '../../../src/components/LeadText.js';
-import { Button } from '../../../src/components/Buttons.js';
+import { LeadText } from '/src/components/LeadText.js';
+import { Button } from '/src/components/Buttons.js';
 
 <LeadText content="Here you can find all my Salesforce Marketing Cloud Engagement IdeaExchange contributions. Let's make the change!" />
 
