--- a/sites/ideas/salesforce/marketing-cloud-personalization-ideas.mdx
+++ b/sites/ideas/salesforce/marketing-cloud-personalization-ideas.mdx
@@ -7,8 +7,8 @@ image: img/og/og-image-mcp-ideas.png
 tags: [Marketing Cloud Personalization, Interaction Studio]
 ---
 
-import { LeadText } from '../../../src/components/LeadText.js';
-import { Button } from '../../../src/components/Buttons.js';
+import { LeadText } from '/src/components/LeadText.js';
+import { Button } from '/src/components/Buttons.js';
 
 <LeadText content="Here you can find all my Marketing Cloud Personalization (Interaction Studio) IdeaExchange contributions. Let's make the change!" />
 
