--- a/sites/licence.mdx
+++ b/sites/licence.mdx
@@ -4,7 +4,7 @@ title: License & Attribution
 description: Let's talk copyrights in a human-readable way
 ---
 
-import { LeadText } from '../src/components/LeadText.js';
+import { LeadText } from '/src/components/LeadText.js';
 
 <LeadText content="Let's talk copyrights in a human-readable way." />
 
