--- a/sites/newsletter.mdx
+++ b/sites/newsletter.mdx
@@ -6,8 +6,8 @@ image: img/og/og-image-newsletter.png
 tags: [Marketing Cloud, Personalization, Agentforce, Best Practice, Email]
 ---
 
-import { LeadText } from '../src/components/LeadText.js';
-import { Form } from '../src/components/FormEmbed.js';
+import { LeadText } from '/src/components/LeadText.js';
+import { Form } from '/src/components/FormEmbed.js';
 
 <LeadText content="Get yet another email in your inbox. This time, about SFMC." />
 
