--- a/sites/privacy.mdx
+++ b/sites/privacy.mdx
@@ -4,7 +4,7 @@ title: Privacy
 description: Legal stuff. Short and simple
 ---
 
-import { LeadText } from '../src/components/LeadText.js';
+import { LeadText } from '/src/components/LeadText.js';
 
 <LeadText content="Legal stuff. Short and simple." />
 
