--- a/sites/toolset.mdx
+++ b/sites/toolset.mdx
@@ -4,7 +4,7 @@ title: Toolset
 description: Show me your tools, and I will tell you who you are. Or so they say
 ---
 
-import { LeadText } from '../src/components/LeadText.js';
+import { LeadText } from '/src/components/LeadText.js';
 
 <LeadText content="Show me your tools, and I will tell you who you are. Or so they say." />
 
