--- a/docs/js/snippets/tailor-with-data.mdx
+++ b/docs/js/snippets/tailor-with-data.mdx
@@ -9,7 +9,7 @@ tags: [Marketing Cloud, Eloqua, JavaScript, Personalisation, Cloud Page]
 
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
-import { LeadText } from '../../../src/components/LeadText.js';
+import { LeadText } from '/src/components/LeadText.js';
 
 <LeadText content="Everyone and his boss are talking about personalisation. Most stop at tailoring the content. Don't be that person. Utilise the power of simple data logic and control the user flows." />
 
