--- a/docs/salesforce/agentforce/sf-agentforce-basics.mdx
+++ b/docs/salesforce/agentforce/sf-agentforce-basics.mdx
@@ -10,8 +10,8 @@ unlisted: true
 
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
-import { LeadText } from '../../../src/components/LeadText.js';
-import { Countdown } from '../../../src/components/Countdown.js';
+import { LeadText } from '/src/components/LeadText.js';
+import { Countdown } from '/src/components/Countdown.js';
 
 <LeadText content='WIP.' />
 
