--- a/docs/salesforce/marketing-cloud-engagement/ampscript/ampscript-style-guide.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/ampscript/ampscript-style-guide.mdx
@@ -7,7 +7,7 @@ image: img/og/og-image-ampscript-style-guide.png
 tags: [Marketing Cloud Engagement, AMPScript, Style Guide, Best Practice]
 ---
 
-import { LeadText } from '../../../../src/components/LeadText.js';
+import { LeadText } from '/src/components/LeadText.js';
 
 <LeadText content='Script with style. Readable code is a few rules & conventions away.' />
 
