--- a/docs/salesforce/marketing-cloud-engagement/config/behavioral-triggers.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/config/behavioral-triggers.mdx
@@ -9,8 +9,8 @@ tags: [Marketing Cloud, Configuration, Email, Journey, Personalisation, Behavior
 
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
-import { LeadText } from '../../../../src/components/LeadText.js';
-import { ButtonRow } from '../../../../src/components/Buttons.js';
+import { LeadText } from '/src/components/LeadText.js';
+import { ButtonRow } from '/src/components/Buttons.js';
 
 <LeadText content="Win-back your e-commerce customers with SFMC Behavioral Triggers." />
 
