--- a/docs/salesforce/marketing-cloud-engagement/config/mobile-connect-data-views.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/config/mobile-connect-data-views.mdx
@@ -9,7 +9,7 @@ tags: [Marketing Cloud, Configuration, SQL, Analytics, Data Extensions, SMS]
 
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
-import { LeadText } from '../../../../src/components/LeadText.js';
+import { LeadText } from '/src/components/LeadText.js';
 
 <LeadText content='Dive deep into SMS System Data Views - the backend Marketing Cloud data. Actionable pearls await.' />
 
