--- a/docs/salesforce/marketing-cloud-engagement/sql/sql-aggregate-functions.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/sql/sql-aggregate-functions.mdx
@@ -9,7 +9,7 @@ tags: [Marketing Cloud, SQL]
 
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
-import { LeadText } from '../../../../src/components/LeadText.js';
+import { LeadText } from '/src/components/LeadText.js';
 
 <LeadText content='Group rows and apply aggregate functions to see the big picture in your data.' />
 
