--- a/docs/salesforce/marketing-cloud-engagement/sql/sql-date-functions.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/sql/sql-date-functions.mdx
@@ -7,7 +7,7 @@ image: img/og/og-image-sql-date-functions.png
 tags: [Marketing Cloud, SQL]
 ---
 
-import { LeadText } from '../../../../src/components/LeadText.js';
+import { LeadText } from '/src/components/LeadText.js';
 
 <LeadText content='Take control over dates with built-in SQL functions. Let the query do the job.' />
 
