--- a/docs/salesforce/marketing-cloud-engagement/sql/sql-null-functions.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/sql/sql-null-functions.mdx
@@ -7,7 +7,7 @@ image: img/og/og-image-sql-null-functions.png
 tags: [Marketing Cloud, SQL]
 ---
 
-import { LeadText } from '../../../../src/components/LeadText.js';
+import { LeadText } from '/src/components/LeadText.js';
 
 <LeadText content='IS NULL, or IS NOT NULL, that is the question. Ways of working with NULL values in SFMC SQL.' />
 
