--- a/docs/salesforce/marketing-cloud-engagement/sql/sql-select.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/sql/sql-select.mdx
@@ -7,7 +7,7 @@ image: img/og/og-image-sql-select.png
 tags: [Marketing Cloud, SQL]
 ---
 
-import { LeadText } from '../../../../src/components/LeadText.js';
+import { LeadText } from '/src/components/LeadText.js';
 
 <LeadText content='Selected information on the SELECT statement in SFMC SQL' />
 
