--- a/docs/salesforce/marketing-cloud-engagement/sql/sql-style-guide.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/sql/sql-style-guide.mdx
@@ -7,7 +7,7 @@ image: img/og/og-image-sql-style-guide.png
 tags: [Marketing Cloud, SQL, Style Guide, Best Practice]
 ---
 
-import { LeadText } from '../../../../src/components/LeadText.js';
+import { LeadText } from '/src/components/LeadText.js';
 
 <LeadText content='Query with style. Readable, bug-free code is a few shifts & spaces away.' />
 
