--- a/docs/salesforce/marketing-cloud-engagement/sql/sql-where.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/sql/sql-where.mdx
@@ -7,7 +7,7 @@ image: img/og/og-image-sql-where.png
 tags: [Marketing Cloud, SQL]
 ---
 
-import { LeadText } from '../../../../src/components/LeadText.js';
+import { LeadText } from '/src/components/LeadText.js';
 
 <LeadText content='Use WHERE to make your query lean and to the point. Less is more.' />
 
