--- a/docs/salesforce/marketing-cloud-engagement/ssjs/snippets/ampscript-in-ssjs.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/ssjs/snippets/ampscript-in-ssjs.mdx
@@ -7,7 +7,7 @@ image: img/og/og-image-ampscript-in-ssjs.png
 tags: [Marketing Cloud, SSJS, AMPScript, Snippet]
 ---
 
-import { LeadText } from '../../../../../src/components/LeadText.js';
+import { LeadText } from '/src/components/LeadText.js';
 
 <LeadText content="Not all AMPScript functions are available in SSJS. But you still can use them." />
 
