--- a/docs/salesforce/marketing-cloud-personalization/serverside-code-properties.mdx
+++ b/docs/salesforce/marketing-cloud-personalization/serverside-code-properties.mdx
@@ -7,7 +7,7 @@ image: img/og/og-image-mcp-serverside-code-properties.png
 tags: [Marketing Cloud, Marketing Cloud Personalization, Interaction Studio, Personalisation, TypeScript]
 ---
 
-import { LeadText } from '../../../src/components/LeadText.js';
+import { LeadText } from '/src/components/LeadText.js';
 
 <LeadText content="Build your marketers' dream campaign configuration UI in Marketing Cloud Personalization (Interaction Studio). All the input magic in one place." />
 
